# DR_KeyboardTracker

./: CMakeLists.txt
cmake/windows/: obs-module.rc.in
data/locale/: en-US.ini  ja-JP.ini  zh-TW.ini
docs/: README.md  README_EN.md  dr_kteditor.md  dr_kteditor_EN.md  dr_ktgenerator.md  dr_ktgenerator_EN.md  key_filename_mapping.md
dr_kteditor/: app.js  index.html  style.css
dr_ktgenerator/: app.js  index.html  style.css
src/: dr_keyboard_tracker.cpp
